--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body{
 
 main{
     background-color: honeydew;
-    height: 1500px;
+    height: 1000px;
     font-size: 5rem;
     display: flex;
     justify-content: center;
@@ -12,7 +12,7 @@ main{
 }
 
 h1{
-    font-size: 2rem;
+    font-size: 1.8rem;
 }
 h2{
     font-size: 1.5rem;
@@ -91,7 +91,7 @@ h3{
 .email-modal__info{
     width: 100%;
     
-    padding: 20px;
+    padding: 30px 15px;
 }
 
 .email-modal__image-column{
@@ -175,5 +175,10 @@ h3{
 }
 .email-thankyou__msg{
     font-size: .9rem;
-  
+}
+
+.email-modal__invalid-message p{
+    font-size: .9rem;
+    color: hsl(61, 100%, 50%) ;
+    padding-bottom: 8px;
 }
