--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ h3{
     display: flex;
     margin-bottom: 20px;
     padding: 5px;
+    border:white 1px solid;
 }
 
 .email-modal__input-field{
@@ -157,7 +158,7 @@ h3{
     justify-content: center;
     text-align: center;
     transform: translate3d(100%, 0, 0);
-    transition: all .4s ease-in-out;
+    transition: all .3s ease-in-out;
     color:black;
     opacity: 0;
 }
@@ -167,18 +168,43 @@ h3{
     transform: translate3d(0,0,0);
 }
 
+.email-thankyou__sneaker-emoji{
+    font-size: 5rem; 
+    padding-bottom: 2rem;
+}
+
 .email-thankyou__title{
     font-size: 2rem;
     margin-bottom: 1.5rem;
     font-weight: 900;
-    opacity: 1;
+    opacity: 0;
+    transition: opacity .4s ease-in-out .4s;
 }
 .email-thankyou__msg{
+    opacity: 0;
     font-size: .9rem;
+    transition: opacity .4s ease-in-out .7s;
+}
+
+/* Controls animation of Thank You message contents */
+.email-thankyou--visible .email-thankyou__title, .email-thankyou--visible .email-thankyou__msg{
+    opacity: 1;
+}
+
+
+/* ERROR styling */
+
+.email-modal__form-group--error{
+    border:1px solid red;
 }
 
 .email-modal__invalid-message p{
     font-size: .9rem;
     color: hsl(61, 100%, 50%) ;
     padding-bottom: 8px;
+    display: none;
+}
+
+.email-modal__invalid-message--visible p{
+    display: block;
 }
